--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,9 @@ button{
 .options{
     width: 100px;
     height: 100px;
-    background: black;
+    /* background: black; */
     /* padding: 10px; */
     margin: 8px;
+    color: black;
    
 }
