--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
     width: 100%;
     height: 100px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: darksalmon;
@@ -35,11 +36,15 @@ button{
     color: honeydew;
 }
 .main{
+    background: black;
+}
+.option-container{
     display: flex;
     width: 300px;
     flex-wrap: wrap;
     padding: 20px;
     margin: auto;
+   
     /* justify-content: center; */
 
 }
@@ -50,5 +55,6 @@ button{
     /* padding: 10px; */
     margin: 8px;
     color: black;
+    border-radius: 10px;
    
 }
