--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 .container{
     height: 100vh;
@@ -11,44 +12,64 @@
 }
 .header{
     width: 100%;
-    height: 100px;
+    height: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: darksalmon;
+    background: steelblue;
     color: white;
 }
-.section{
-    height: 40px;
-    width: 100%;
+.color{
+    background: white;
+    color: steelblue;
+    font-weight: 500;
+    font-size: 19px;
+    width: 180px;
+    height: 35px;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 30px;
+}
+.controls{
+   
+    width: 80%;
+    margin-top: 50px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background: beige;
+    justify-content: space-between;
+    /* align-items: center; */
+   
 }
 button{
     padding: 7px 9px;
-    background-color:gray;
-    border: none;
-    font-size: 10px;
+    background-color:transparent;
+    border: 1px solid white;
+    font-size: 15px;
     font-weight: bold;
-    color: honeydew;
+    color: white;
+    text-transform: capitalize;
+    border-radius: 3px;
 }
-.main{
-    background: black;
+#replay{
+ 
 }
-.option-container{
+#option-container{
+    /* display: grid; */
+    /* grid-template-columns: repeat(3,1fr); */
     display: flex;
-    width: 300px;
-    flex-wrap: wrap;
-    padding: 20px;
-    margin: auto;
+    justify-content: center;
+    flex-direction: row;
+   
+    /* width: 100%; */
+    /* flex-wrap: wrap; */
+    /* padding: 20px; */
+    /* margin: auto; */
    
     /* justify-content: center; */
 
 }
 .options{
+    
     width: 100px;
     height: 100px;
     /* background: black; */
@@ -57,4 +78,10 @@ button{
     color: black;
     border-radius: 10px;
    
+}
+.hide{
+    display: none;
+}
+.show{
+    display: block;
 }
